fix: Bug fix Z-index Languages

--- a/src/styles/nav.module.css
+++ b/src/styles/nav.module.css
@@ -167,6 +167,7 @@ body {
   right: 20px;
   top: 20px;
   font-size: 1.3rem;
+  z-index: 9999;
 }
 
 .navContainer .languages {
